# handmade-rs

./: Cargo.toml  GEMINI.md  LICENSE  README.md
src/: main.rs
